Comprehensive set of Leiningen task to handle build and deployment